--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/system_accent1_700"
-    tools:context=".LoginActivity">
+    tools:context=".HomeActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
