--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,21 @@
     android:background="@color/material_dynamic_primary20"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/image_circle"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_margin="5dp"
+        android:src="@drawable/circle1"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <TextView
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Welcome"
-        android:textSize="80dp"
+        android:textSize="80sp"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         android:gravity="center"
@@ -27,29 +36,19 @@
         android:textColor="#FFFFFF"
         android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/login"/>
-    <TextView
-        android:id="@+id/loginText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Are you a member already?  "
-        android:textSize="25sp"
-        android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text2"/>
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
+        android:id="@+id/joinButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/design_default_color_secondary_variant"
-        android:text="Login"
-        android:textSize="45sp"
+        android:backgroundTint="#03A9F4"
+        android:text="Join Now"
+        android:textSize="38sp"
         android:textColor="#FFFFFF"
+        android:paddingHorizontal="75dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="70dp"/>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
